# plex-cat-theatre

./: .gitignore  MANIFEST.in  README.de.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.nl.md  README.th.md  README.vi.md  README.zh-CN.md  README.zh-HK.md  README.zh-TW.md  cat_theatre_init.py  index.html  install.sh  movies.css  movies.js  movies.min.js  movies_catalog.py  movies_catalog_index.py  movies_catalog_media.py  movies_catalog_scan.py  movies_catalog_workers.py  movies_config.sample.json  movies_resources.py  movies_server.py  movies_server_auth.py  movies_server_core.py  movies_server_locale.py  movies_server_media.py  movies_server_overlay.py  movies_server_plex.py  passcode.py  pyproject.toml  requirements.txt  setup.py  startup.sh
.github/workflows/: pull-request-checks.yml  python-publish.yml  testpypi-publish.yml
cat_theatre_assets/: movies.css  movies_config.sample.json
cat_theatre_assets/locales/: de.js  ja.js  ko.js  nl.js  th.js  vi.js
cat_theatre_assets/server_locales/: ja.json  nl.json  th.json  vi.json  zh-CN.json
locales/: de.js  fr.js  ja.js  ko.js  nl.js  th.js  vi.js  zh-CN.js  zh-HK.js  zh-TW.js
server_locales/: de.json  en.json  fr.json  ko.json  zh-HK.json
tests/: test_cat_theatre_init.py  test_movies_server_core.py  test_movies_server_overlay.py  test_movies_server_plex.py
