[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plex-cat-theatre"
version = "2026.03.24"
description = "Lightweight self-hosted movie browser and streaming server with optional Plex integration."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "DCHA" },
]
dependencies = [
  "Flask>=3.0,<4.0",
  "waitress>=3.0,<4.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Video",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.scripts]
plex-cat-theatre-init = "cat_theatre_init:main"
plex-cat-theatre = "movies_server:main"
plex-cat-theatre-passcode = "passcode:main"

[tool.setuptools]
py-modules = [
  "cat_theatre_init",
  "movies",
  "movies_catalog",
  "movies_catalog_index",
  "movies_catalog_media",
  "movies_catalog_scan",
  "movies_catalog_workers",
  "movies_resources",
  "movies_server",
  "movies_server_auth",
  "movies_server_core",
  "movies_server_locale",
  "movies_server_media",
  "movies_server_overlay",
  "movies_server_plex",
  "passcode",
]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cat_theatre_assets", "cat_theatre_assets.*"]

[tool.setuptools.package-data]
cat_theatre_assets = [
  "index.html",
  "movies.css",
  "movies.js",
  "movies.min.js",
  "plex.svg",
  "movies_config.sample.json",
  "locales/*.js",
  "server_locales/*.json",
]
